prusti-tests/tests/verify/ui/forall_verify.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/forall_verify.rs:17:27
   |
17 | #[ensures(forall(|x: i32| identity(x) == x + 1))]
   |                           ^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/forall_verify.rs:18:1
   |
18 | fn test3() {}
   | ^^^^^^^^^^^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/forall_verify.rs:30:27
   |
30 | #[ensures(exists(|x: i32| identity(x) == x + 1))]
   |                           ^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/forall_verify.rs:31:1
   |
31 | fn test6() {}
   | ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

